# 4-practica-mascotas-virtuales-maria-jose-cordoba

./: README.md
MascotasVirtuales/: CMakeLists.txt  main.cpp
MascotasVirtuales/4-practica-mascotas-virtuales-maria-jose-cordoba/: Actividad.md  README.md
MascotasVirtuales/src/: Cuidado.cpp  Cuidado.h  Habilidad.cpp  Habilidad.h  Mascota.cpp  Mascota.h  Objeto.cpp  Objeto.h  Usuario.cpp  Usuario.h  pixelPet.cpp  pixelPet.h
